--- a/catalog/templates/catalog/categories.html
+++ b/catalog/templates/catalog/categories.html
@@ -1,16 +1,18 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
+{% for product in products %}
 <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
 
         <div class="my-3 py-3">
-            <h2 class="display-5">Другой заголовок</h2>
-            <p class="lead">И еще более остроумный подзаголовок.</p>
+            <h2 class="display-5">{{ product }}</h2>
+            <p class="lead">{{ product.description }}</p>
             <a class="btn btn-outline-secondary" href="#">Скоро будет</a>
         </div>
         <div class="bg-light shadow-sm mx-auto"
              style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
 </div>
+{% endfor %}
 {% endblock %}
