--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -4,9 +4,9 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
         <div class="my-3 py-3">
-            <h2 class="display-5">{{ product }}</h2>
+            <h2 class="display-5">{{ product.name | title }}</h2>
             <p class="lead">И еще более остроумный подзаголовок.</p>
-            <a class="btn btn-outline-secondary" href="{% url 'catalog:categories' %}">Просмотр</a>
+            <a class="btn btn-outline-secondary" href="{% url 'catalog:category_products' product.pk %}">Просмотр</a>
         </div>
         <div class="bg-light shadow-sm mx-auto"
              style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
