--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -3,16 +3,16 @@
 <div class="col-12 mb-5">
     <a class="btn btn-outline-secondary" href="{% url 'catalog:create_product' %}">Добавить товар</a>
 </div>
-{% for category in categories %}
+{% for object in object_list %}
 <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
         <div class="my-3 py-3">
-            <h2 class="display-5">{{ category.name | title }}</h2>
+            <h2 class="display-5">{{ object.name | title }}</h2>
             <p class="lead">И еще более остроумный подзаголовок.</p>
-            <img src="/media/{{ object.image }} width="400" height="410" />
-            <a class="btn btn-outline-secondary" href="{% url 'catalog:category_products' category.pk %}">Просмотр</a>
-            <a class="btn btn-outline-secondary" href="{% url 'catalog:update_product' category.pk %}">Редактирование</a>
-            <a class="btn btn-outline-secondary" href="{% url 'catalog:delete_product' category.pk %}">Удаление</a>
+            <img src={{ object.image }} width="400" height="410" />
+            <a class="btn btn-outline-secondary" href="{% url 'catalog:category_products' object.pk %}">Просмотр</a>
+            <a class="btn btn-outline-secondary" href="{% url 'catalog:update_product' object.pk %}">Редактирование</a>
+            <a class="btn btn-outline-secondary" href="{% url 'catalog:delete_product' object.pk %}">Удаление</a>
         </div>
 
         <div class="bg-light shadow-sm mx-auto"
