--- a/catalog/templates/catalog/includes/inc_category.html
+++ b/catalog/templates/catalog/includes/inc_category.html
@@ -3,10 +3,10 @@
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
 
         <div class="my-3 py-3">
-            <h2 class="display-5">{{ product }}</h2>
-            <img src={{ product.image | mymedia }} width="400" height="410">
-            <p class="lead">{{ product.description |  slice:1000 }}</p>
-            <a class="btn btn-outline-secondary" href="{% url 'catalog:update_product' product.pk %}">Редактировать</a>
+            <h2 class="display-5">{{ object }}</h2>
+            <img src={{ object.image | mymedia }} width="400" height="410">
+            <p class="lead">{{ object.description |  slice:1000 }}</p>
+            <a class="btn btn-outline-secondary" href="{% url 'catalog:update_product' object.pk %}">Редактировать</a>
         </div>
 
     </div>
