--- a/blog/templates/blog/blog_form.html
+++ b/blog/templates/blog/blog_form.html
@@ -1,25 +1,30 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-<div class="col-12">
-    <div class="row">
-        <div class="col-6">
-            <div class="card">
-                <div class="card-body">
-                    <form method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-success">
-                            {% if object %}
-                                Сохранить
-                            {% else %}
-                                Создать
-                            {% endif %}
-                        </button>
-                    </form>
-                </div>
+<div class="col-6">
+    <div class="card">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title">
+                    Добавление материала
+                </h3>
             </div>
+            <div class="card-body">
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-success">
+                        {% if object %}
+                        Сохранить
+                        {% else %}
+                        Создать
+                        {% endif %}
+                    </button>
+                </form>
+            </div>
+            <div class="card-footer"></div>
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
