--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -1,6 +1,6 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
-{% load my_tags %}
+{% load my_tags_blog %}
 <div class="col-12 mb-5">
     <a class="btn btn-outline-secondary" href="{% url 'blog:create' %}">Добавить материал</a>
 </div>
