--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -44,24 +44,21 @@
             </svg>
         </a>
         <a class="py-2 d-none d-md-inline-block" href="/">Главная</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Меню</a>
         <a class="py-2 d-none d-md-inline-block" href="{% url 'blog:list' %}">Материалы</a>
         <a class="py-2 d-none d-md-inline-block" href="{% url 'catalog:categories' %}">Все модели</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Поиск</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Избранное</a>
-        <a class="py-2 d-none d-md-inline-block" href="#">Корзина</a>
+        {% if user.is_authenticated %}
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'users:profile' %}">Профиль</a>
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'users:logout' %}">Выйти</a>
+        {% else %}
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'users:login' %}">Войти</a>
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'users:register' %}">Регистрация</a>
+        {% endif %}
     </nav>
 </header>
 
 <main>
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
         <h1 class="display-4 fw-normal">{{ title }}</h1>
-        <img src="media/products/kategorii_300kh400_botilony.jpg"/>
-        <img src="media/products/kategorii_300kh400_sapogi.jpg"/>
-        <img src="media/products/kategorii_300kh400_trendy.jpg"/>
-        <img src="media/products/Туфли.jpg"/>
-
-
     </div>
     </div>
     {% block content%}
