--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -1,21 +1,22 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
+
 <div class="col-12 mb-5">
+    {% if user.is_authenticated %}
     <a class="btn btn-outline-secondary" href="{% url 'catalog:create_product' %}">Добавить товар</a>
+    {% endif %}
 </div>
-{% for object in object_list %}
 <div class="d-md-flex flex-md-equal w-100 my-md-3 ps-md-3">
+    {% for object in object_list %}
     <div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
         <div class="my-3 py-3">
-            <h2 class="display-5">{{ object.name | title }}</h2>
+            <h2 class="display-6">{{ object.name | title }}</h2>
             <p class="lead">И еще более остроумный подзаголовок.</p>
-            <img src={{ object.image }} width="400" height="410"/>
             <a class="btn btn-outline-secondary" href="{% url 'catalog:category_products' object.pk %}">Просмотр</a>
         </div>
-
         <div class="bg-light shadow-sm mx-auto"
              style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
     </div>
+    {% endfor %}
 </div>
-{% endfor %}
 {% endblock %}
